Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ h1 {
     letter-spacing: -1px;
 }
 
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 36px;
+    }
+}
+
 h2 {
     font-size: 32px;
 }
