--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -45,6 +45,8 @@
 
 nav a {
     display: inline-block;
+    /*padding: 0 0.67em;*/
+    padding: 0 0.67em;
     line-height: 56px;
 }
 
@@ -76,13 +78,14 @@ nav a:active {
     line-height: 56px;
 }
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 600px) {
     .nav-toggle {
         display: block;
         position: inherit;
         background: none;
         border: none;
-        padding-left: 1em;
+        padding-left: 0em;
+        padding-right: 0.33em;
         line-height: 56px;
         /*transform: translateY(-30%);*/
     }
@@ -122,7 +125,7 @@ nav ul {
     /*min-width: 50vw;*/
 }
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 600px) {
     nav ul {
         display: block;
         position: inherit;
@@ -145,16 +148,28 @@ nav li:hover {
     text-decoration: underline;
 }
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 600px) {
     nav li {
         display: inline-block;
         color: #000;
         /*padding: 0 1em;*/
-        padding: 0 0.67em;
-        line-height: 56px
+        padding: 0;
+        line-height: 56px;
     }
+
+    /*nav li:last-child {
+        padding: 0 0 0 0.67em;
+    }*/
 
     nav li:hover {
         background: #f2f2f2;
     }
+}
+
+nav.container {
+    /*max-width: 31.67em;*/
+    /*max-width: 32.33em;*/
+    max-width: 32em;
+    padding: 0;
+    /*padding-right: 0.33em;*/
 }
